Reduces the bottom space for cutoff issue

--- a/www/src/scss/viewer.scss
+++ b/www/src/scss/viewer.scss
@@ -120,7 +120,7 @@ body {
 }
 
 .deck {
-  height: calc(100% - 100px);
+  height: calc(100% - 40px);
   opacity: 0;
   overflow: hidden;
   position: absolute;
